--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!-- Header Section [DONE] -->
+    <!-- Header Section -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -26,27 +26,27 @@
         </nav>
     </header>
 
-    <!-- Hero Section [DONE] -->
+    <!-- Hero Section -->
     <section class="hero"></section>
     
-    <!-- Content Section [DONE] -->
+    <!-- Content Section -->
     <section class="content">
         <article id="search-engine-optimization" class="content-article">
-            <img  class="float-left" src="./assets/images/search-engine-optimization.jpg" alt="Replace Me!!"/>
+            <img  class="float-left" src="./assets/images/search-engine-optimization.jpg" alt="A table with office supplies including a notepad with SEO written on it"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
         <article id="online-reputation-management" class="content-article">
-            <img class="float-right" src="./assets/images/online-reputation-management.jpg" alt="Replace Me!!"/>
+            <img class="float-right" src="./assets/images/online-reputation-management.jpg" alt="Person holding a phone working on bar graphs titled Reputation on their laptop"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
         <article id="social-media-marketing" class="content-article">
-            <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="Replace Me!!"/>
+            <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="A business meeting around a table with social media icons scattered across it"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -54,23 +54,23 @@
         </article>
     </section>
 
-    <!-- Benefits Section [DONE]-->
+    <!-- Benefits Section -->
     <section class="benefits">
-        <article class="benefit-article">
+        <article class="benefits-article">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt=""/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
-        <article class="benefit-article">
+        <article class="benefits-article">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt=""/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
-        <article class="benefit-article">
+        <article class="benefits-article">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt=""/>
             <p>
@@ -79,7 +79,7 @@
         </article>
     </section>
 
-    <!-- Footer Section [DONE]-->
+    <!-- Footer Section -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
